# webinar_axumcrud

./: .env  Cargo.toml
migrations/: 20231002035216_initial.sql
src/: db.rs  main.rs  rest.rs
