[package]
name = "webinar_axumcrud"
version = "0.1.0"
edition = "2021"

[workspace.lints.rust]
unsafe_code = "forbid"

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1.0.75"
dotenv = "0.15.0"
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.8.2", features = [ "runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
axum = "0.7.5"
once_cell = "1.18.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
axum-test-helper = "0.4.0"
